<resources>
    <string name="app_name">Unknown runner</string>
    <string name="Start">Start</string>
    <string name="Resume">Resume</string>
    <string name="ToMainMenu">To main menu</string>
    <string name="GameOver">Game over</string>
    <string name="Restart">Restart</string>
    <string name="Pause">Pause</string>
    <string name="Loading">Loading…</string>

    <string name="HighScore">High score: </string>

    <string name="hint">How to play</string>
    <string name="hintText">Tap screen to jump\nSwipe down to drop faster\nJump on enemies to bring justice\nCollect flying gems to get more scores\nEnjoy!</string>
    <string name="back">Back</string>
</resources>